[package]
name = "mech-syntax"
version = "0.2.17"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "A toolchain for compiling textual syntax into Mech blocks."
documentation = "http://docs.mech-lang.org"
homepage = "https://mech-lang.org"
repository = "https://github.com/mech-lang/syntax"
keywords = ["mech", "language", "programming", "parser", "compiler"]
categories = ["no-std", "science::robotics", "science", "parser-implementations"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[badges]
gitlab = { repository = "mech-lang/syntax", branch = "main" }
maintenance = { status = "actively-developed" }

[features]
default = []
no-std = ["mech-core/no-std", "rlibc"]

[dependencies]
mech-core = "0.2.17"

hashbrown = "0.15.0"
lazy_static = "1.5.0"
nom = "7.1.3"
nom-unicode = "0.3.0"
unicode-segmentation = "1.12.0"
rlibc = { version = "=1.0", optional = true }
serde = "1.0.213"
serde_derive = "1.0.213"
colored = "2.1.0"
nalgebra = "0.33.1"
indexmap = "2.6.0"
tabled = "0.16.0"
libm = "0.2.8"
simba = "0.9.0"
paste = "1.0.15"

[dependencies.num-traits]
version = "0.2.19"
default-features = false
features = ["libm"]

[patch.crates-io]
mech-core = {path = "../core"}

[profile.release]
debug = true