[package]
name = "mech-syntax"
version = "0.2.33"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "A toolchain for compiling textual syntax into Mech blocks."
documentation = "http://docs.mech-lang.org"
homepage = "https://mech-lang.org"
repository = "https://github.com/mech-lang/syntax"
keywords = ["mech", "language", "programming", "parser", "compiler"]
categories = ["no-std", "science::robotics", "science", "parser-implementations"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.84"

[badges]
gitlab = { repository = "mech-lang/syntax", branch = "main" }
maintenance = { status = "actively-developed" }

[features]
default = []
no-std = ["mech-core/no-std", "rlibc"]

[dependencies]
mech-core = "0.2.33"

hashbrown = "0.15.2"
lazy_static = "1.5.0"
nom = "7.1.3"
nom-unicode = "0.4.0"
unicode-segmentation = "1.12.0"
rlibc = { version = "=1.0", optional = true }
serde = "1.0.218"
serde_derive = "1.0.218"
colored = "3.0.0"
nalgebra = "0.33.2"
indexmap = "2.7.1"
tabled = "0.18.0"
libm = "0.2.11"
simba = "0.9.0"
paste = "1.0.15"

[dependencies.num-traits]
version = "0.2.19"
default-features = false
features = ["libm"]