[package]
name = "mech-utilities"
version = "0.1.0"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "Shared components and utilities for Mech"
documentation = "http://docs.mech-lang.org"
homepage = "https://mech-lang.org"
repository = "https://github.com/mech-lang/utilities"
keywords = ["mech"]
categories = ["science::robotics", "science"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[badges]
gitlab = { repository = "mech-lang/utilities", branch = "main" }
maintenance = { status = "actively-developed" }

[features]
default = ["web"]
web = ["websocket"]

[dependencies]
mech-core = {path = "../core"}

serde = {version = "1.0.189", default-features = false, features = ["alloc"] }
serde_derive = "1.0.189"
hashbrown = "0.14.1"
crossbeam-channel = "0.5.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
websocket = {version = "0.26.5", optional = true, default-features = false, features = ["sync"]}